--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#0287c3</color>
     <color name="colorAccent">#FF80AB</color>
+    <color name="white">#FFFFFF</color>
+    <color name="lightBlack">#232222</color>
+    <color name="grey">#8F8F8F</color>
+    <color name="lightGrey">#E4E4E4</color>
+    <color name="yellow">#EACC0A</color>
+
 </resources>
